--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="restar">Restar</string>
     <string name="multiplicar">Multiplicar</string>
     <string name="dividir">Dividir</string>
+    <string name="calcular">Calcular</string>
 </resources>
